Fix wrong fontello font name after name change to wdn-icon

--- a/wdn/templates_4.0/less/layouts/formvalidator.less
+++ b/wdn/templates_4.0/less/layouts/formvalidator.less
@@ -8,7 +8,7 @@ ul.validation-advice {
 	font-size: 0.8em;
 	
 	li:before {
-		font-family: "fontello";
+		font-family: "wdn-icon";
 	    font-style: normal;
 	    font-weight: normal;
 	    speak: none;
